test/libsolidity/syntaxTests/freeFunctions/free_receive.sol
receive() {}
// ----
// ParserError: (0-7): Expected pragma, import directive or contract/interface/library/struct/enum/function definition.
